--- a/samples/core/src/test/resources/config/application.properties
+++ b/samples/core/src/test/resources/config/application.properties
@@ -19,3 +19,5 @@ server.rest.test.user=waiter
 server.rest.test.password=waiter
 server.rest.test.flyway.baseline=0000
 server.rest.test.flyway.migration=0002
+
+logging.level.io.oasp.module.logging.common.impl=DEBUG
