--- a/samples/server/src/main/resources/application.properties
+++ b/samples/server/src/main/resources/application.properties
@@ -14,12 +14,8 @@ security.expose.error.details=false
 security.cors.enabled=false
 spring.jpa.hibernate.ddl-auto=validate
 #http://stackoverflow.com/questions/25283198/spring-boot-jpa-column-name-annotation-ignored
-spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.EJB3NamingStrategy
 
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.type=trace
 # to prevent that Spring Boot launches batch jobs on startup
 # might otherwise lead to errors if job parameters are needed (or lead to unwanted modifications and longer startup times)
 # see http://stackoverflow.com/questions/22318907/how-to-stop-spring-batch-scheduled-jobs-from-running-at-first-time-when-executin
